--- a/LobbyOptionsAPI/LobbyOptionsAPI.csproj
+++ b/LobbyOptionsAPI/LobbyOptionsAPI.csproj
@@ -1,18 +1,245 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
         <Version>1.0.0</Version>
         <GameVersion>2020.12.9s</GameVersion>
         <Mappings>NuclearPowered/Mappings:0.1.0</Mappings>
 
         <Description>API allowing 1-line custom lobby options, including custom RPC sync and settings saving</Description>
         <Authors>Herysia</Authors>
+        <TargetFramework>net472</TargetFramework>
     </PropertyGroup>
+    
 
     <ItemGroup>
-        <Deobfuscate Include="$(AmongUs)\BepInEx\plugins\Reactor-$(GameVersion).dll" />
+      <Folder Include="Imports" />
+    </ItemGroup>
 
-        <PackageReference Include="Reactor.OxygenFilter.MSBuild" Version="0.2.3" />
+    <ItemGroup>
+      <Reference Include="0Harmony, Version=2.3.1.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\0Harmony.dll</HintPath>
+      </Reference>
+      <Reference Include="Apple, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Apple.dll</HintPath>
+      </Reference>
+      <Reference Include="AppleCore, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\AppleCore.dll</HintPath>
+      </Reference>
+      <Reference Include="AppleMacos, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\AppleMacos.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Assembly-CSharp.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp-firstpass, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Assembly-CSharp-firstpass.dll</HintPath>
+      </Reference>
+      <Reference Include="BepInEx.Core, Version=6.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\BepInEx.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="BepInEx.IL2CPP, Version=6.0.0.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\BepInEx.IL2CPP.dll</HintPath>
+      </Reference>
+      <Reference Include="FacebookStore, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\FacebookStore.dll</HintPath>
+      </Reference>
+      <Reference Include="Hazel, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Hazel.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppMono.Security, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppMono.Security.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2Cppmscorlib, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2Cppmscorlib.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Configuration, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Configuration.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Core, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Data, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Data.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Diagnostics.StackTrace, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Diagnostics.StackTrace.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Globalization.Extensions, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Globalization.Extensions.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.IO.Compression, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.IO.Compression.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Net.Http, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Net.Http.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Numerics, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Numerics.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Runtime.Serialization, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Runtime.Serialization.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Xml, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Xml.dll</HintPath>
+      </Reference>
+      <Reference Include="Il2CppSystem.Xml.Linq, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Il2CppSystem.Xml.Linq.dll</HintPath>
+      </Reference>
+      <Reference Include="netstandard, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\netstandard.dll</HintPath>
+      </Reference>
+      <Reference Include="Newtonsoft.Json, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Newtonsoft.Json.dll</HintPath>
+      </Reference>
+      <Reference Include="Purchasing.Common, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Purchasing.Common.dll</HintPath>
+      </Reference>
+      <Reference Include="QRCoder, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\QRCoder.dll</HintPath>
+      </Reference>
+      <Reference Include="Rewired_Core, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Rewired_Core.dll</HintPath>
+      </Reference>
+      <Reference Include="Rewired_Windows, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Rewired_Windows.dll</HintPath>
+      </Reference>
+      <Reference Include="Security, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Security.dll</HintPath>
+      </Reference>
+      <Reference Include="Stores, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Stores.dll</HintPath>
+      </Reference>
+      <Reference Include="UnhollowerBaseLib, Version=0.4.14.0, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnhollowerBaseLib.dll</HintPath>
+      </Reference>
+      <Reference Include="Unity.Addressables, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Unity.Addressables.dll</HintPath>
+      </Reference>
+      <Reference Include="Unity.Analytics.DataPrivacy, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Unity.Analytics.DataPrivacy.dll</HintPath>
+      </Reference>
+      <Reference Include="Unity.ResourceManager, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Unity.ResourceManager.dll</HintPath>
+      </Reference>
+      <Reference Include="Unity.TextMeshPro, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\Unity.TextMeshPro.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.AIModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.AIModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.AndroidJNIModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.AndroidJNIModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.AnimationModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.AnimationModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.AssetBundleModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.AssetBundleModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.AudioModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.AudioModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.CoreModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.CoreModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.DirectorModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.DirectorModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.GridModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.GridModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.ImageConversionModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.ImageConversionModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.IMGUIModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.IMGUIModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.InputLegacyModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.InputLegacyModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.InputModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.InputModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.JSONSerializeModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.JSONSerializeModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.ParticleSystemModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.ParticleSystemModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.Physics2DModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.Physics2DModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.PhysicsModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.PhysicsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.Purchasing, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.Purchasing.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.ScreenCaptureModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.ScreenCaptureModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.SharedInternalsModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.SharedInternalsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.SpriteMaskModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.SpriteMaskModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.SubsystemsModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.SubsystemsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.TerrainModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.TerrainModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.TextCoreModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.TextCoreModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.TextRenderingModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.TextRenderingModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.TilemapModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.TilemapModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UI, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UI.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UIElementsModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UIElementsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UIModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UIModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UnityAnalyticsModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UnityAnalyticsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UnityWebRequestAssetBundleModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UnityWebRequestAssetBundleModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UnityWebRequestModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UnityWebRequestModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.UnityWebRequestWWWModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.VFXModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.VFXModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.VideoModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.VideoModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.VRModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.VRModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.XRModule, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\UnityEngine.XRModule.dll</HintPath>
+      </Reference>
+      <Reference Include="winrt, Version=3.7.1.6, Culture=neutral, PublicKeyToken=null">
+        <HintPath>Imports\winrt.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
     <Target Name="Copy" AfterTargets="Reobfuscate">
